<resources>
    <string name="app_name">Group</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="textNoNetwork">沒有網路</string>
    <string name="textNoGroupsFound">找不到旅遊團</string>
    <string name="textCancel">取消</string>
    <string name="textInsert">新增</string>
    <string name="textGroupName">旅遊團名稱</string>
    <string name="textPickPicture">選照片</string>
    <string name="textTakePicture">拍照</string>
    <string name="textStartDate">旅遊日期</string>
    <string name="textDateTime">活動日期</string>
    <string name="textDatePicker">選擇</string>
    <string name="textTravel">行程攻略</string>
    <string name="textTravelName">選擇</string>
    <string name="textNumber">報名人數最多:</string>
    <string name="textDateStart">開始報名日期</string>
    <string name="textDateEnd">報名截止日期</string>
    <string name="textNote">備註</string>
    <string name="textNoCameraApp">沒有相機程式</string>
    <string name="textNoImageCropAppFound">找不到截圖程式</string>
</resources>
